--- a/README
+++ b/README
@@ -6,4 +6,4 @@ this stuff is worth it, you can buy us a beer in return
 ----------------------------------------------------------------------------
 
 This is a project to take advantage of the LED-Screen located at the 
-Club Discordia in Berlin (CCCB).
+CCCB in Berlin.
